# devman-async-python-3

./: .dockerignore  .env.example  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
streamer/: __init__.py  main.py  settings.py  zipper.py
tests/: conftest.py  test_app.py  test_draft.py  test_zipper.py
tests/test-files/unit/: random-bytes
